--- a/app/styles/_print.scss
+++ b/app/styles/_print.scss
@@ -54,10 +54,6 @@
       font-size: 28px;
     }
 
-    .description {
-      margin-bottom: 30px;
-    }
-
     .other-info {
       flex-wrap: wrap;
       display: flex;
